--- a/bioSite.css
+++ b/bioSite.css
@@ -1,93 +1,83 @@
 html {
-  height: 100%;
-  margin: 0;
+    background-color: rgba(255, 205, 0, 0.25);
 }
 
-#banner {
-    text-align: center;
-    background-color: blue;
-    width: 100%;
-    height: 350px;
-}
-
-#container {
-    background-color: black;
-    height: 100%;
-}
-
-header {
-    text-align: center;
-    background-color: brown;
-    overflow: hidden;
-    margin: none;
-    flex: 0 1 auto;
+p {
+    font-family: Raleway;
 }
 
 #navbar {
     overflow: hidden;
-    background-color: green;
     width: 100%;
+    border-bottom: 1px solid rgba(0, 48, 135, 0.75);
 }
 
 #navbar a {
-    background-color: green;
     float: left;
     display: block;
-    padding: 14px 16px;
+    padding: 5px 16px;
     text-align: center;
+    font-family: Raleway;
+    text-decoration: none;
+    color: #444444;
+    padding-bottom: 20px;
 }
 
-title {
-    background-color: blueviolet;
+#navbar a:hover {
+    color: rgba(200, 16, 46, 0.75);
+}
+
+#banner {
+    width: 100%;
+    height: 350px;
+    display: flex;
+    flex: 1 1 auto;
+    border-bottom: 1px solid rgba(0, 48, 135, 0.75);
+    padding-top: 25px;
+    padding-bottom: 25px;
+    background-image: url("images/banner.jpg");
+}
+
+#banner img {
+    font-family: Raleway;
+    margin-top: 10px;
+    width: 300px;
+    border: 1px solid rgba(0, 48, 135, 1);
+}
+
+#container {
+    height: 100%;
 }
 
 #content {
-    background-color: aqua;
     display: flex;
     flex: 1 1 auto;
     width: 100%;
     text-align: center;
-    justify-content:center;
-    align-items:center;
+    justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
-    height: 600px;
 }
 
 footer {
-    background-color: darkgoldenrod;
     width: 100%;
     height: 100%;
     text-align: center;
     flex: 0 1 40px;
     margin-bottom: 0;
+    background-color: rgba(255, 205, 0, 0.25);
 }
 
 .card {
-    width: 300px;
-    height: 300px;
-    background-color: fuchsia;
+    width: 425px;
     margin: 50px 100px 50px 100px;
+    border: 1px solid rgba(0, 48, 135, 1);
 }
 
-#banner-content {
-    background-color: lightblue;
-    display: flex;
-    flex: 1 1 auto;
-    width: 100%;
-    text-align: center;
-    justify-content:center;
-    align-items:center;
-    flex-wrap: wrap;
-    margin-bottom: 25px;
+.card:hover {
+    color: rgba(200, 16, 46, 0.75);
 }
 
-#banner-content p {
-   margin-top: 0;
-}
-
-.pane {
-    background-color: darkolivegreen;
-    width: 66%;
-    height: 300px;
-    margin-left: 30px;
+.card-content {
+    padding: 20px;
 }
