--- a/bioSite.css
+++ b/bioSite.css
@@ -1,30 +1,41 @@
 html {
     background-color: rgba(255, 205, 0, 0.25);
+    font-family: Raleway;
 }
 
-p {
-    font-family: Raleway;
+header {
+    text-align: center;
+    color: #444444;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    height:100vh; 
+    margin:0;
 }
 
 #navbar {
     overflow: hidden;
     width: 100%;
     border-bottom: 1px solid rgba(0, 48, 135, 0.75);
+    border-top: 1px solid rgba(0, 48, 135, 0.75);
+    margin-bottom: 25px;
 }
 
 #navbar a {
     float: left;
     display: block;
-    padding: 5px 16px;
     text-align: center;
     font-family: Raleway;
     text-decoration: none;
     color: #444444;
-    padding-bottom: 20px;
+    padding-right: 25px;
+    padding-left: 25px;
 }
 
 #navbar a:hover {
-    color: rgba(200, 16, 46, 0.75);
+    background-color: rgba(0, 48, 135, 0.75);
 }
 
 #banner {
@@ -60,22 +71,16 @@ p {
 }
 
 footer {
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    flex: 0 1 40px;
-    margin-bottom: 0;
-    background-color: rgba(255, 205, 0, 0.25);
+    border-top: 1px solid rgba(0, 48, 135, 1);
+    text-align: right;
+    margin-top: auto;
+    min-height: 25px;
 }
 
 .card {
     width: 425px;
     margin: 50px 100px 50px 100px;
     border: 1px solid rgba(0, 48, 135, 1);
-}
-
-.card:hover {
-    color: rgba(200, 16, 46, 0.75);
 }
 
 .card-content {
